# PyThermoModels

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
agents/: activity.md  eos.md
docs/: docs.md  examples.md  index.md  methods.md
examples/: activity-2.py  activity-3.py  exp-0.py  fugacity-gas.py  thermodb_config_link.yml
examples/activity-models/: activity-1-2.py  activity-1-3.py  activity-1-4.py  activity-1.py  activity-2-2.py  activity-2.py  activity-3-2.py  activity-3-3.py  activity-3-4.py  activity-3.py  activity-ternary-nrtl.py  activity-unifac-1.py  calc activity using nrtl - 1.py  calc activity using nrtl inline source and build model source - 1.py  calc activity using nrtl inline source and build model source - multi.py  calc activity using nrtl inline source- 1.py  calc activity using nrtl inline source- 2.py  calc activity using nrtl with args - 1.py  calc activity using uniquac inline source and build model source - 1.py  calc activity using uniquac with args - 1.py  calc-parameters-nrtl.py  calc-parameters-uniquac.py  thermodb_config_link.yml
examples/eos-models/: fugacity-gas using build model source - 2.py  fugacity-gas using build model source - 3.py  fugacity-gas using build model source.py  fugacity-gas-inline-source.py  fugacity-gas.py  fugacity-liquid using build model source - 1.py  fugacity-liquid using build model source - 2.py  fugacity-liquid-inline-source - 2.py  fugacity-liquid-inline-source.py  fugacity-liquid-mixture.py  fugacity-liquid.py  fugacity-mixture using build model source.py  fugacity-mixture.py  thermodb_config_link.yml
pyThermoModels/: __init__.py  app.py
pythermomodels/: __init__.py  app.py
test/: 1,3-Butadiene.pkl  1-butene.pkl  activity-1-2.py  activity-1-3.py  activity-1-4.py  activity-1.py  activity-2-2.py  activity-2.py  activity-3-3.py  activity-3.py  carbon monoxide.pkl  ethylene.pkl  fugacity-2.py  fugacity-gas-inline-source.py  fugacity-gas.py  fugacity-liquid.py  fugacity-mixture.py  fugacity.py  fugacity_data.csv  fugacity_input.yml  hydrogen.pkl  methane.pkl  n-butane.pkl  propane.pkl  test1.py  thermodb_config.yml  thermodb_config_link.yml
(+82 files in other folders)
